<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.AlarmActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_add_alarm"
        android:background="#83776D"
        app:title="@string/add_reminder"
        app:titleTextColor="#ffffff"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"/>

    <TextView
        android:textColor="#DD2C00"
        android:textSize="25sp"
        android:paddingLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_start" />

    <EditText
        android:id="@+id/edit_date"
        android:textSize="25sp"
        android:focusable="false"
        android:layout_margin="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/edit_hour"
        android:textSize="25sp"
        android:focusable="false"
        android:layout_marginLeft="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="@string/repeat"
        android:textSize="25sp"
        android:textColor="#DD2C00"
        android:paddingLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Spinner
        android:id="@+id/spinner_repeat_time"
        android:padding="5dp"
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:id="@+id/layout_checkbox"
        android:orientation="vertical"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <CheckBox
            android:id="@+id/checkbox_monday"
            android:text="@string/monday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <CheckBox
            android:id="@+id/checkbox_tuesday"
            android:text="@string/tuesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <CheckBox
            android:id="@+id/checkbox_wendnesday"
            android:text="@string/wednesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <CheckBox
            android:id="@+id/checkbox_thursday"
            android:text="@string/thursday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <CheckBox
            android:id="@+id/checkbox_friday"
            android:text="@string/friday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <CheckBox
            android:id="@+id/checkbox_saturday"
            android:text="@string/saturday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <CheckBox
            android:id="@+id/checkbox_sunday"
            android:text="@string/sunday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_repeat_time"
        android:visibility="gone"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textColor="#DD2C00"
            android:textSize="25sp"
            android:paddingLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/space_time_repeat"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <NumberPicker
                android:id="@+id/number_picker_hour"
                android:solidColor="#ffffff"
                android:layout_margin="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </NumberPicker>

            <TextView
                android:text="@string/hour"
                android:padding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <NumberPicker
                android:id="@+id/number_picker_minute"
                android:solidColor="#ffffff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </NumberPicker>

            <TextView
                android:text="@string/minutes"
                android:padding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>